--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "postcss": "^8.2.4",
+    "rc-progress": "^3.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.9",
