--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.9",
+    "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "react-reveal": "^1.2.2",
     "tailwindcss": "^2.0.2"
