--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/image-url": "^0.140.19",
     "@brainhubeu/react-carousel": "^1.19.26",
     "@types/brainhubeu__react-carousel": "^2.0.2",
     "autoprefixer": "^10.2.1",
