--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-feather": "^2.0.9",
     "react-intersection-observer": "^8.31.0",
     "react-reveal": "^1.2.2",
+    "react-tilt": "^0.1.4",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
