--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/image-url": "^0.140.19",
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/client": "^2.2.6",
+    "@sanity/image-url": "^0.140.19",
     "@types/brainhubeu__react-carousel": "^2.0.2",
     "autoprefixer": "^10.2.1",
     "framer-motion": "^3.3.0",
@@ -21,7 +22,9 @@
     "react-elastic-carousel": "^0.11.1",
     "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
+    "react-instagram-embed": "^2.0.0",
     "react-intersection-observer": "^8.31.0",
+    "react-parallax-tilt": "^1.4.82",
     "react-reveal": "^1.2.2",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2"
