--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.19",
-    "@brainhubeu/react-carousel": "^1.19.26",
     "@types/brainhubeu__react-carousel": "^2.0.2",
     "autoprefixer": "^10.2.1",
     "framer-motion": "^3.3.0",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
