--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@brainhubeu/react-carousel": "^1.19.26",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.19",
-    "@types/brainhubeu__react-carousel": "^2.0.2",
     "autoprefixer": "^10.2.1",
     "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "postcss": "^8.2.4",
-    "rc-progress": "^3.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-elastic-carousel": "^0.11.1",
@@ -31,6 +28,7 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "prettier": "^2.2.1",
+    "prettierrc": "^0.0.0-5",
     "typescript": "^4.1.3"
   }
 }
