--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@sanity/client": "^2.2.6",
     "@sanity/image-url": "^0.140.19",
     "@types/brainhubeu__react-carousel": "^2.0.2",
-
     "autoprefixer": "^10.2.1",
+    "axios": "^0.21.1",
     "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "postcss": "^8.2.4",
