--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "@types/react-reveal": "^1.2.2",
     "prettier": "^2.2.1",
     "prettierrc": "^0.0.0-5",
     "typescript": "^4.1.3"
