--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^0.140.19",
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.7",
     "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "postcss": "^8.2.4",
