--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^0.140.19",
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "postcss": "^8.2.4",
@@ -28,6 +29,7 @@
     "react-reveal": "^1.2.2",
     "react-spring": "^8.0.27",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^8.1.1",
     "react-with-gesture": "^4.0.8",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2"
