--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-toastify": "^8.1.1",
     "react-with-gesture": "^4.0.8",
     "styled-components": "^5.2.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
