💄 Final touch landing page

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-intersection-observer": "^8.31.0",
     "react-parallax-tilt": "^1.4.82",
     "react-reveal": "^1.2.2",
+    "react-rewards": "^2.0.3",
     "react-spring": "^8.0.27",
     "react-tilt": "^0.1.4",
     "react-toastify": "^8.1.1",
