💄 Update timeline ui

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "10.0.5",
     "postcss": "^8.2.4",
     "react": "17.0.1",
+    "react-chrono": "^1.15.1",
     "react-dom": "17.0.1",
     "react-elastic-carousel": "^0.11.1",
     "react-feather": "^2.0.9",
