--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "prettier": "^2.2.1",
     "prettierrc": "^0.0.0-5",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": ">=12.0.0 <15.0.0"
   }
 }
