--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_YOUTUBE_KEY = <string : Youtube Key>
-NEXT_PUBLIC_SANITY_PROJECT_ID = <string : Project ID>
+SANITY_PROJECT_ID = <string : Project ID>
 INSTA_KEY = <string : Instagram Client Access Token>
 NEXT_PUBLIC_BASE_URL = <string : API URL>
