--- a/package.json
+++ b/package.json
@@ -8,43 +8,40 @@
     "start": "next start"
   },
   "dependencies": {
-    "@brainhubeu/react-carousel": "^1.19.26",
-    "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/client": "^2.2.6",
-    "@sanity/image-url": "^1.0.1",
-    "autoprefixer": "^10.2.1",
-    "axios": "^0.21.1",
-    "formik": "^2.2.9",
-    "framer-motion": "^3.3.0",
-    "next": "10.0.5",
-    "postcss": "^8.2.4",
-    "react": "17.0.1",
-    "react-chrono": "^1.15.1",
-    "react-dom": "17.0.1",
-    "react-elastic-carousel": "^0.11.1",
-    "react-feather": "^2.0.9",
-    "react-icons": "^4.2.0",
-    "react-instagram-embed": "^2.0.0",
-    "react-intersection-observer": "^8.31.0",
-    "react-parallax-tilt": "^1.4.82",
+    "@brainhubeu/react-carousel": "^2.0.4",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^6.4.3",
+    "@sanity/image-url": "^1.0.2",
+    "axios": "^1.4.0",
+    "formik": "^2.4.3",
+    "framer-motion": "^10.15.1",
+    "next": "13.4.13",
+    "postcss": "^8.4.27",
+    "react": "18.2.0",
+    "react-chrono": "^2.2.4",
+    "react-dom": "18.2.0",
+    "react-elastic-carousel": "0.11.5",
+    "react-feather": "^2.0.10",
+    "react-icons": "^4.10.1",
+    "react-instagram-embed": "^3.0.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-parallax-tilt": "^1.7.157",
     "react-reveal": "^1.2.2",
-    "react-rewards": "^2.0.3",
-    "react-spring": "^8.0.27",
+    "react-rewards": "^2.0.4",
     "react-tilt": "^0.1.4",
-    "react-toastify": "^8.1.1",
-    "react-with-gesture": "^4.0.8",
-    "styled-components": "^5.2.1",
-    "tailwindcss": "^2.0.2",
-    "yup": "^0.32.11"
+    "react-toastify": "^9.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
-    "prettier": "^2.2.1",
+    "@types/node": "^20.4.8",
+    "@types/react": "^18.2.18",
+    "prettier": "^3.0.1",
     "prettierrc": "^0.0.0-5",
-    "typescript": "^4.1.3"
+    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.14",
+    "typescript": "^5.1.6"
   },
   "engines": {
-    "node": ">=12.0.0 <15.0.0"
+    "node": ">=18.0.0"
   }
 }
