--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@itseasy21/react-elastic-carousel": "^0.12.3",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.2.6",
     "autoprefixer": "^10.2.1",
