--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "prettier": "^2.2.1",
     "prettierrc": "^0.0.0-5",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
