--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@itseasy21/react-elastic-carousel": "^0.12.3",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.2.6",
-    "@sanity/image-url": "^1.0.1",
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "framer-motion": "^3.3.0",
-    "next": "10.0.5",
+    "next": "13.0.0",
     "postcss": "^8.2.4",
-    "react": "17.0.1",
+    "react": "18.2.0",
     "react-chrono": "^1.15.1",
-    "react-dom": "17.0.1",
-    "react-elastic-carousel": "^0.11.1",
+    "react-dom": "18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
     "react-instagram-embed": "^2.0.0",
@@ -29,22 +29,20 @@
     "react-parallax-tilt": "^1.4.82",
     "react-reveal": "^1.2.2",
     "react-rewards": "^2.0.3",
-    "react-spring": "^8.0.27",
     "react-tilt": "^0.1.4",
     "react-toastify": "^8.1.1",
-    "react-with-gesture": "^4.0.8",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
+    "@types/node": "18.15.3",
+    "@types/react": "18.2.0",
     "prettier": "^2.2.1",
     "prettierrc": "^0.0.0-5",
     "typescript": "^4.1.3"
   },
   "engines": {
-    "node": ">=12.0.0 <15.0.0"
+    "node": ">=18.0.0"
   }
 }
